--- a/src/views/profiles.ejs
+++ b/src/views/profiles.ejs
@@ -84,16 +84,6 @@
         </div>
     </div>
 
-    <script>
-        const toggleModeBtn = document.querySelector('.toggle-mode');
-        const body = document.body;
-        const box = document.querySelector('.box');
-
-        toggleModeBtn.addEventListener('click', () => {
-            body.classList.toggle('dark-mode');
-            box.classList.toggle('dark-mode');
-            toggleModeBtn.querySelector('i').classList.toggle('fa-sun');
-        });
-    </script>
+    <script src="/src/public/js/DarkMode.js"></script>
 </body>
 </html>
