--- a/src/views/register.ejs
+++ b/src/views/register.ejs
@@ -4,27 +4,42 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Anime Platform - Register</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
   <link rel="stylesheet" href="/src/public/css/register.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
 <body>
-  <div class="register-container">
-    <h1>Registro</h1>
+  <div class="login-form">
+    <h1 class="login-form-title">Registro</h1>
     <form action="/register" method="post">
-      <div class="mb-3">
-        <label for="username" class="form-label">Nombre de usuario:</label>
-        <input type="text" class="form-control" id="username" name="username" required>
+      <div class="field">
+        <div class="control has-icons-left">
+          <input type="text" class="input" placeholder="Nombre de usuario" id="username" name="username" required>
+          <span class="icon is-small is-left">
+            <i class="fas fa-user"></i>
+          </span>
+        </div>
       </div>
-      <div class="mb-3">
-        <label for="email" class="form-label">Correo electrónico:</label>
-        <input type="email" class="form-control" id="email" name="email" required>
+      <div class="field">
+        <div class="control has-icons-left">
+          <input type="email" class="input" placeholder="Correo electrónico" id="email" name="email" required>
+          <span class="icon is-small is-left">
+            <i class="fas fa-envelope"></i>
+          </span>
+        </div>
       </div>
-      <div class="mb-3">
-        <label for="password" class="form-label">Contraseña:</label>
-        <input type="password" class="form-control" id="password" name="password" required>
+      <div class="field">
+        <div class="control has-icons-left">
+          <input type="password" class="input" placeholder="Contraseña" id="password" name="password" required>
+          <span class="icon is-small is-left">
+            <i class="fas fa-lock"></i>
+          </span>
+        </div>
       </div>
-      <div class="d-grid">
-        <button type="submit" class="btn btn-primary">Registrarse</button>
+      <div class="field">
+        <div class="control">
+          <button type="submit" class="button is-fullwidth">Registrarse</button>
+        </div>
       </div>
     </form>
   </div>
