--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -4,26 +4,37 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Anime Platform - Login</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
   <link rel="stylesheet" href="/src/public/css/login.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
 <body>
-  <div class="login-container">
-    <h1>Iniciar Sesión</h1>
+  <div class="login-form">
+    <h1 class="login-form-title">Inicio de sesión</h1>
     <form action="/login" method="post">
-      <div class="mb-3">
-        <label for="username" class="form-label">Nombre de usuario:</label>
-        <input type="text" class="form-control" id="username" name="username" required>
+      <div class="field">
+        <div class="control has-icons-left">
+          <input type="text" class="input" placeholder="Nombre de usuario" id="username" name="username" required>
+          <span class="icon is-small is-left">
+            <i class="fas fa-user"></i>
+          </span>
+        </div>
       </div>
-      <div class="mb-3">
-        <label for="password" class="form-label">Contraseña:</label>
-        <input type="password" class="form-control" id="password" name="password" required>
+      <div class="field">
+        <div class="control has-icons-left">
+          <input type="password" class="input" placeholder="Contraseña" id="password" name="password" required>
+          <span class="icon is-small is-left">
+            <i class="fas fa-lock"></i>
+          </span>
+        </div>
       </div>
-      <% if (locals.error) { %>
-        <div class="alert alert-danger"><%= error %></div>
-      <% } %>
-      <div class="d-grid">
-        <button type="submit" class="btn btn-primary">Iniciar Sesión</button>
+      <div class="field">
+        <div class="control">
+          <button type="submit" class="button is-fullwidth">Iniciar sesión</button>
+        </div>
+      </div>
+      <div class="has-text-centered">
+        <a href="#" class="forgot-password-link">¿Olvidaste tu contraseña?</a>
       </div>
     </form>
   </div>
