--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -22,7 +22,7 @@
         </div>
         <div class="hero-body">
             <div class="container has-text-centered">
-                <h1 class="title is-size-1-desktop is-size-2-mobile" style="color: #ff6b6b;">Welcome to Anime Platform</h1>
+                <h1 class="title is-size-1-desktop is-size-2-mobile" style="color: #ff6b6b;">Welcome to NakamaStream</h1>
                 <p class="subtitle is-size-4-desktop is-size-5-mobile" style="color: #ff6b6b;">Discover the best anime series and movies.</p>
                 <p class="control">
                     <a href="/login" class="button is-primary" style="background-color: #ff6b6b; border-color: #ff6b6b; color: white;">
