--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -14,7 +14,7 @@
                 <div class="container">
                     <div class="navbar-brand">
                         <a class="navbar-item" href="#">
-                            <img src="/src/others/NakamStream-logo.png" alt="NakamaStream">
+                            <img src="https://github.com/NakamaStream/Resources/blob/main/NakamStream-logo.jpg?raw=true">
                         </a>
                     </div>
                 </div>
