🚧 Update login.ejs

--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -34,6 +34,8 @@
         </div>
       </div>
       <div class="has-text-centered">
+        <a href="register" class="forgot-password-link">¿No estás registrado? Regístrate aquí</a>
+        <br>
         <a href="#" class="forgot-password-link">¿Olvidaste tu contraseña?</a>
       </div>
     </form>
