🚧 Update register.ejs

--- a/src/views/register.ejs
+++ b/src/views/register.ejs
@@ -41,6 +41,11 @@
           <button type="submit" class="button is-fullwidth">Registrarse</button>
         </div>
       </div>
+      <div class="has-text-centered">
+        <a href="register" class="forgot-password-link">¿ya tienes una cuenta? Logeate aqui</a>
+        <br>
+        <a href="#" class="forgot-password-link">¿Olvidaste tu contraseña?</a>
+      </div>
     </form>
   </div>
 </body>
