--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -29,6 +29,14 @@
         </div>
       </div>
       <div class="field">
+        <p class="captcha-phrase"><%= captchaPhrase %></p>
+      </div>
+      <div class="field">
+        <div class="control">
+          <input type="text" class="input" placeholder="Completa la frase" name="captchaInput" required>
+        </div>
+      </div>
+      <div class="field">
         <div class="control">
           <button type="submit" class="button is-fullwidth">Iniciar sesión</button>
         </div>
