--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -32,8 +32,11 @@
         <p class="captcha-phrase"><%= captchaPhrase %></p>
       </div>
       <div class="field">
-        <div class="control">
+        <div class="control has-icons-left">
           <input type="text" class="input" placeholder="Completa la frase" name="captchaInput" required>
+          <span class="icon is-small is-left">
+            <i class="fa fa-comment" aria-hidden="true"></i>
+          </span>
         </div>
       </div>
       <div class="field">
