--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -26,7 +26,7 @@
                 <p class="subtitle is-size-4-desktop is-size-5-mobile" style="color: #ff6b6b;">Descripcion breve xD.</p>
                 <p class="control">
                     <a href="/login" class="button is-primary" style="background-color: #ff6b6b; border-color: #ff6b6b; color: white;">
-                        Sign In
+                        Iniciar Sesíon
                     </a>
                 </p>
                 <p class="mt-5">
