--- a/src/views/register.ejs
+++ b/src/views/register.ejs
@@ -10,7 +10,7 @@
 </head>
 <body>
   <div class="login-form">
-    <h1 class="login-form-title">Registro</h1>
+    <h1 class="login-form-title">Registrarse</h1>
     <form action="/register" method="post">
       <div class="field">
         <div class="control has-icons-left">
@@ -42,7 +42,7 @@
         </div>
       </div>
       <div class="has-text-centered">
-        <a href="register" class="forgot-password-link">¿ya tienes una cuenta? Logeate aqui</a>
+        <a href="/login" class="forgot-password-link">¿ya tienes una cuenta? Logeate aqui</a>
         <br>
         <a href="#" class="forgot-password-link">¿Olvidaste tu contraseña?</a>
       </div>
